force-app/main/default/objects/CGD_Raw_Data__c/CGD_Raw_Data__c.object-meta.xml
<CustomObject>
    <label>Raw Data</label>
    <nameField>
        <label>Raw Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raw Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>