force-app/main/default/objects/CGD_Raw_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Raw Datas</relationshipLabel>
    <relationshipName>Raw_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>