force-app/main/default/objects/CGD_Raw_Data__c/fields/All_In_Sales_Revenue_in_TWD__c.field-meta.xml
<CustomField>
    <fullName>All_In_Sales_Revenue_in_TWD__c</fullName>
    <label>All In Sales Revenue in TWD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>