force-app/main/default/objects/CGD_Raw_Data__c/fields/All_In_Selling_Rate_in_USD__c.field-meta.xml
<CustomField>
    <fullName>All_In_Selling_Rate_in_USD__c</fullName>
    <label>All In Selling Rate in USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>