force-app/main/default/objects/CGD_Raw_Data__c/fields/Arrival_Gateway_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Gateway_Airport__c</fullName>
    <label>Arrival Gateway - Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>