force-app/main/default/objects/CGD_Raw_Data__c/fields/AWB_Count__c.field-meta.xml
<CustomField>
    <fullName>AWB_Count__c</fullName>
    <label>AWB Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>