force-app/main/default/objects/CGD_Raw_Data__c/fields/CGD_Order_History__c.field-meta.xml
<CustomField>
    <fullName>CGD_Order_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CGD Order History</label>
    <referenceTo>CGD_Order_History__c</referenceTo>
    <relationshipLabel>Raw Datas</relationshipLabel>
    <relationshipName>Raw_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>