force-app/main/default/objects/CGD_Raw_Data__c/fields/CGD_Sub_Contract__c.field-meta.xml
<CustomField>
    <fullName>CGD_Sub_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CGD Sub-Contract</label>
    <referenceTo>CGD_Sub_Contract__c</referenceTo>
    <relationshipLabel>Raw Datas</relationshipLabel>
    <relationshipName>Raw_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>