force-app/main/default/objects/CGD_Raw_Data__c/fields/Chargeable_Weight_in_kg__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Weight_in_kg__c</fullName>
    <label>Chargeable Weight in kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>