force-app/main/default/objects/CGD_Raw_Data__c/fields/Departure_Gateway_Airport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Gateway_Airport__c</fullName>
    <label>Departure Gateway - Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>