force-app/main/default/objects/CGD_Raw_Data__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>