force-app/main/default/objects/CGD_Raw_Data__c/fields/First_JX_Flight_Month_Name__c.field-meta.xml
<CustomField>
    <fullName>First_JX_Flight_Month_Name__c</fullName>
    <label>First JX Flight Month Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>