force-app/main/default/objects/CGD_Raw_Data__c/fields/Incentive_All_All_Key__c.field-meta.xml
<CustomField>
    <fullName>Incentive_All_All_Key__c</fullName>
    <formula>IF(Source__c=&apos;Incentive&apos;,
Account_Code__c
&amp;&quot;_All_All_&quot;&amp;

First_JX_Flight_Year__c,
&apos;&apos;
)</formula>
    <label>Incentive All All Key</label>
    <type>Text</type>
</CustomField>