force-app/main/default/objects/CGD_Raw_Data__c/fields/Incentive_All_Destination_Key__c.field-meta.xml
<CustomField>
    <fullName>Incentive_All_Destination_Key__c</fullName>
    <formula>IF(Source__c=&apos;Incentive&apos;,
Account_Code__c
&amp;&quot;_All_&quot;&amp;
Destination_Airport__c&amp;&quot;_&quot;&amp;
First_JX_Flight_Year__c,
&apos;&apos;
)</formula>
    <label>Incentive All Destination Key</label>
    <type>Text</type>
</CustomField>