force-app/main/default/objects/CGD_Raw_Data__c/fields/Incentive_Key__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Key__c</fullName>
    <formula>IF(Source__c=&apos;Incentive&apos;,
Account_Code__c&amp;&quot;_&quot;&amp;
Origin_Airport__c&amp;&quot;_&quot;&amp;
Destination_Airport__c&amp;&quot;_&quot;&amp;
First_JX_Flight_Year__c,
&apos;&apos;
)</formula>
    <label>Incentive Key</label>
    <type>Text</type>
</CustomField>