force-app/main/default/objects/CGD_Raw_Data__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>TEXT(Month(First_JX_Flight_Date__c))</formula>
    <label>Month</label>
    <type>Text</type>
</CustomField>