force-app/main/default/objects/CGD_Raw_Data__c/fields/Ori_All_in_Sales_Revenue_local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Ori_All_in_Sales_Revenue_local_Currency__c</fullName>
    <label>Ori. All-in Sales Revenue local Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>