force-app/main/default/objects/CGD_Raw_Data__c/fields/Ori_All_in_Selling_Rate_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Ori_All_in_Selling_Rate_in_USD__c</fullName>
    <label>Ori. All-in Selling Rate in USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>