force-app/main/default/objects/CGD_Raw_Data__c/fields/Origin_Airport__c.field-meta.xml
<CustomField>
    <fullName>Origin_Airport__c</fullName>
    <label>Origin - Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>