force-app/main/default/objects/CGD_Raw_Data__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True to Trigger</description>
    <inlineHelpText>True to Trigger</inlineHelpText>
    <label>Run</label>
    <type>Checkbox</type>
</CustomField>