force-app/main/default/objects/CGD_Raw_Data__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>403</fullName>
                <label>Duplicated</label>
            </value>
            <value>
                <fullName>401</fullName>
                <label>No Match Account</label>
            </value>
            <value>
                <fullName>402</fullName>
                <label>No Match Recod</label>
            </value>
            <value>
                <fullName>202</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>Success</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>