force-app/main/default/objects/CGD_Raw_Data__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>TEXT(YEAR(First_JX_Flight_Date__c))</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>