force-app/main/default/objects/CGD_Raw_Data__c/recordTypes/Contract_BSA.recordType-meta.xml
<RecordType>
    <fullName>Contract_BSA</fullName>
    <active>true</active>
    <label>Contract - BSA</label>
</RecordType>