force-app/main/default/objects/CGD_Raw_Data__c/recordTypes/Contract_Incentive.recordType-meta.xml
<RecordType>
    <fullName>Contract_Incentive</fullName>
    <active>true</active>
    <label>Contract - Incentive</label>
</RecordType>