force-app/main/default/objects/CGD_Raw_Data__c/recordTypes/Order_History_Agent.recordType-meta.xml
<RecordType>
    <fullName>Order_History_Agent</fullName>
    <active>true</active>
    <label>Order History - Agent</label>
</RecordType>