force-app/main/default/objects/CGD_Raw_Data__c/recordTypes/Order_History_Interline.recordType-meta.xml
<RecordType>
    <fullName>Order_History_Interline</fullName>
    <active>true</active>
    <label>Order History - Interline</label>
</RecordType>