force-app/main/default/objects/CGD_Raw_Data__c/listViews/Agent.listView-meta.xml
<ListView>
    <fullName>Agent</fullName>
    <columns>NAME</columns>
    <columns>External_Key__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Flag__c</columns>
    <columns>Status__c</columns>
    <columns>CGD_Order_History__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CGD_Raw_Data__c.Order_History_Agent</value>
    </filters>
    <label>Agent</label>
</ListView>