force-app/main/default/objects/CGD_Raw_Data__c/listViews/BSA.listView-meta.xml
<ListView>
    <fullName>BSA</fullName>
    <columns>NAME</columns>
    <columns>External_Key__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>CGD_Sub_Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CGD_Raw_Data__c.Contract_BSA</value>
    </filters>
    <label>BSA</label>
</ListView>