force-app/main/default/objects/CGD_Raw_Data__c/listViews/Incentive.listView-meta.xml
<ListView>
    <fullName>Incentive</fullName>
    <columns>NAME</columns>
    <columns>External_Key__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>Chargeable_Weight_in_kg__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Incentive</label>
</ListView>