force-app/main/default/objects/CGD_Raw_Data__c/listViews/Today_Error_Raw_Data.listView-meta.xml
<ListView>
    <fullName>Today_Error_Raw_Data</fullName>
    <columns>NAME</columns>
    <columns>External_Key__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Flag__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>403,401,402,202</value>
    </filters>
    <label>Today Error Raw Data</label>
</ListView>