force-app/main/default/objects/CGD_Raw_Data__c/listViews/Today_Raw_Data.listView-meta.xml
<ListView>
    <fullName>Today_Raw_Data</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>External_Key__c</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Flag__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Raw Data</label>
</ListView>